--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
     "glob": "^7.1.1",
+    "jschardet": "^1.4.1",
     "nodemon": "^1.11.0",
     "source-map-loader": "^0.1.6",
     "source-map-support": "^0.4.8",
