--- a/package.json
+++ b/package.json
@@ -15,23 +15,7 @@
     "lodash": "^4.17.4",
     "path-exists": "^3.0.0",
     "phpjs": "^1.3.2",
-    "phpunserialize": "^1.0.1"
-  },
-  "keywords": [
-    "phpmorphy",
-    "php-morphy",
-    "morphy",
-    "morphology",
-    "lemma",
-    "lemmatize",
-    "grammar"
-  ],
-  "engines": {
-    "node": ">= 5.10.0",
-    "npm": ">= 3.0.0"
-  },
-  "license": "MIT",
-  "devDependencies": {
+    "phpunserialize": "^1.0.1",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
@@ -47,5 +31,24 @@
     "source-map-loader": "^0.1.6",
     "source-map-support": "^0.4.8",
     "webpack": "2.2.0-rc.3"
-  }
+  },
+  "keywords": [
+    "phpmorphy",
+    "php-morphy",
+    "morphy",
+    "morphology",
+    "lemma",
+    "lemmatize",
+    "grammar"
+  ],
+  "engines": {
+    "node": ">= 5.10.0",
+    "npm": ">= 3.0.0"
+  },
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/webpack/webpack.git"
+  },
+  "homepage": "https://github.com/webpack/webpack"
 }
