--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   },
   "main": "./build/index.js",
   "dependencies": {
+    "encoding": "^0.1.12",
+    "glob": "^7.1.1",
+    "lodash": "^4.17.4",
+    "phpjs": "^1.3.2",
+    "phpunserialize": "^1.0.1"
+  },
+  "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
     "babel-loader": "^6.2.10",
@@ -18,14 +25,9 @@
     "circular-dependency-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
-    "encoding": "^0.1.12",
-    "glob": "^7.1.1",
-    "lodash": "^4.17.4",
-    "nodemon": "^1.11.0",
-    "phpjs": "^1.3.2",
-    "phpunserialize": "^1.0.1",
     "source-map-loader": "^0.1.6",
     "source-map-support": "^0.4.8",
+    "nodemon": "^1.11.0",
     "webpack": "2.2.0-rc.3"
   },
   "keywords": [
