--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "main": "./build/index.js",
   "dependencies": {
     "encoding": "^0.1.12",
-    "glob": "^7.1.1",
     "lodash": "^4.17.4",
     "phpjs": "^1.3.2",
-    "phpunserialize": "^1.0.1"
+    "phpunserialize": "^1.0.1",
+    "source-map-support": "^0.4.8"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -25,9 +25,9 @@
     "circular-dependency-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.1.4",
-    "source-map-loader": "^0.1.6",
-    "source-map-support": "^0.4.8",
+    "glob": "^7.1.1",
     "nodemon": "^1.11.0",
+    "source-map-loader": "^0.1.6",
     "webpack": "2.2.0-rc.3"
   },
   "keywords": [
