--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "phpmorphy",
   "version": "2.0.10",
   "scripts": {
-    "rebuilder": "webpack --watch",
-    "build": "webpack",
+    "rebuilder": "cross-env NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
     "dev": "cross-env NODE_ENV=development nodemon",
     "test": "node ./build/test"
   },
@@ -13,8 +13,7 @@
     "babel-polyfill": "^6.20.0",
     "lodash": "^4.17.4",
     "phpjs": "^1.3.2",
-    "phpunserialize": "^1.0.1",
-    "source-map-support": "^0.4.8"
+    "phpunserialize": "^1.0.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
@@ -28,6 +27,7 @@
     "glob": "^7.1.1",
     "nodemon": "^1.11.0",
     "source-map-loader": "^0.1.6",
+    "source-map-support": "^0.4.8",
     "webpack": "2.2.0-rc.3"
   },
   "keywords": [
@@ -40,7 +40,7 @@
     "grammar"
   ],
   "engines": {
-    "node": ">= 5.10.0",
+    "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
   "license": "MIT",
