--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^3.1.4",
     "glob": "^7.1.1",
     "nodemon": "^1.11.0",
+    "prettier": "^1.19.1",
     "source-map-loader": "^0.1.6",
     "webpack": "2.2.0-rc.3"
   },
