--- a/package.json
+++ b/package.json
@@ -2,36 +2,44 @@
   "name": "phpmorphy",
   "version": "2.1.2",
   "scripts": {
-    "rebuilder": "cross-env NODE_ENV=development webpack --watch",
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "cross-env NODE_ENV=development nodemon",
+    "_rebuilder": "cross-env NODE_ENV=development webpack --watch",
+    "_build": "cross-env NODE_ENV=production webpack",
+    "_dev": "cross-env NODE_ENV=development nodemon",
+    "clean": "rm -rf dist && mkdir dist",
+    "babel": "babel src --out-dir dist --copy-files --source-maps",
+    "babel:watch": "run-s \"babel -- --watch\"",
+    "watch": "run-s clean babel:watch",
+    "build": "run-s clean babel",
     "test": "node ./dist/test",
     "prepublish": "npm run build && npm run test"
   },
   "main": "./dist/index.js",
   "dependencies": {
-    "babel-polyfill": "^6.20.0",
-    "core-js": "^2.5.7",
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/plugin-proposal-async-generator-functions": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/plugin-proposal-do-expressions": "^7.7.4",
+    "@babel/plugin-proposal-export-default-from": "^7.7.4",
+    "@babel/plugin-proposal-export-namespace-from": "^7.7.4",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.7.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.7.4",
+    "@babel/plugin-proposal-private-methods": "^7.7.4",
+    "@babel/plugin-proposal-throw-expressions": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/runtime-corejs3": "^7.7.4",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "core-js": "^3.4.5",
     "encoding": "^0.1.12",
     "locutus": "^2.0.11",
     "lodash": "^4.17.15",
-    "phpunserialize": "^1.0.1",
-    "source-map-support": "^0.4.8"
+    "npm-run-all": "^4.1.5",
+    "phpunserialize": "^1.0.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-cli": "^6.18.0",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-closure-elimination": "^1.1.14",
-    "babel-preset-env": "^1.1.8",
-    "circular-dependency-plugin": "^2.0.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
-    "glob": "^7.1.1",
-    "nodemon": "^1.11.0",
-    "prettier": "^1.19.1",
-    "source-map-loader": "^0.1.6",
-    "webpack": "2.2.0-rc.3"
+    "prettier": "^1.19.1"
   },
   "keywords": [
     "phpmorphy",
