--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "watch": "run-s clean babel:watch",
     "build": "run-s clean babel",
     "test": "node ./dist/test",
+    "lint": "eslint . --ext .js,.mjs,.ts",
+    "lint:fix": "eslint . --ext .js,.mjs,.ts --fix && prettier \"**/*.{json,md}\" --write",
     "prepublish": "npm run build && npm run test"
   },
   "main": "./dist/index.js",
@@ -39,6 +41,22 @@
     "phpunserialize": "^1.0.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-module-resolver": "^0.15.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-optimize-regex": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-sonarjs": "^0.5.0",
+    "eslint-plugin-unicorn": "^14.0.1",
     "prettier": "^1.19.1"
   },
   "keywords": [
