--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "node -r source-map-support/register ./dist/test",
     "lint": "eslint . --ext .js,.mjs,.ts",
     "lint:fix": "eslint . --ext .js,.mjs,.ts --fix && prettier \"**/*.{json,md}\" --write",
-    "postintall": "echo 'POSTINSTALL!!!!!'",
+    "install": "in-install && npm run build || not-in-install",
     "_prepublish": "npm run build && npm run test"
   },
   "main": "./dist/index.js",
@@ -36,6 +36,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "core-js": "^3.4.5",
     "encoding": "^0.1.12",
+    "in-publish": "^2.0.0",
     "locutus": "^2.0.11",
     "lodash": "^4.17.15",
     "npm-run-all": "^4.1.5",
